# RChecker

./: .gitignore  LICENSE.txt  MANIFEST.in  README-CN.md  README.md  pyproject.toml  rchecker.py  setup.py
rchecker/: __init__.py  cli.py
